implementation of the update by query on QA data types
