# src/main/scala/com/getjenny/starchat/entities/UpdateQAByQueryReq.scala
@@ -1,0 +1,10 @@
+package com.getjenny.starchat.entities
+
+/**
+  * Created by Angelo Leto <angelo@getjenny.com> on 8/04/19.
+  */
+
+case class UpdateQAByQueryReq(
+                                 documentSearch: QADocumentSearch,
+                                 document: QADocumentUpdate
+                               )
