# src/main/scala/com/getjenny/starchat/resources/QAResource.scala
@@ -303,6 +303,35 @@ class QAResource(questionAnswerService: QuestionAnswerService, routeName: String
               }
             }
           }
+        } ~ put {
+          authenticateBasicAsync(realm = authRealm,
+            authenticator = authenticator.authenticator) { user =>
+            extractRequest { request =>
+              authorizeAsync(_ =>
+                authenticator.hasPermissions(user, indexName, Permissions.read)) {
+                parameters("refresh".as[Int] ? 0) { refresh =>
+                entity(as[UpdateQAByQueryReq]) { updateReq =>
+                  val breaker: CircuitBreaker = StarChatCircuitBreaker.getCircuitBreaker()
+                  onCompleteWithBreaker(breaker)(Future {
+                    questionAnswerService.updateByQuery(indexName = indexName, updateReq = updateReq, refresh = refresh)
+                  }) {
+                    case Success(t) =>
+                      completeResponse(StatusCodes.OK, StatusCodes.BadRequest, Option {
+                        t
+                      })
+                    case Failure(e) =>
+                      log.error("index(" + indexName + ") uri=(" + request.uri +
+                        ") method=(" + request.method.name + ") : " + e.getMessage)
+                      completeResponse(StatusCodes.BadRequest,
+                        Option {
+                          ReturnMessageData(code = 110, message = e.getMessage)
+                        })
+                  }
+                }
+                }
+              }
+            }
+          }
         }
       }
     }
